--- a/projects.html
+++ b/projects.html
@@ -259,6 +259,29 @@
                 </div>
             </div>
             </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card">
+              <div class="image-wrapper">
+                <img src="images/portfolio.jpg" class="card-img-top img-fluid" alt="iCoder-A Portfolio Website">
+              </div>
+                <div class="card-body">
+                    <h5 class="card-title">iCoder-A Portfolio Website</h5>
+                        <p class="card-text">"iCoder is a responsive portfolio website built with HTML, CSS, JavaScript, and Bootstrap.
+                          It showcases my projects, skills, and contact information in a clean, modern layout.
+                          Interactive elements and smooth navigation enhance user experience across all devices.
+                          Perfect for developers to present their work and professional profile online."</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><b>Tech-Used:-</b> HTML, CSS, JavaScript, Bootstrap </li>
+                    
+                </ul>
+                
+                <div class="card-body d-flex justify-content-evenly">
+                <button type="button" class="btn btn-warning"><a href="https://github.com/Khushi-Keshari/iCoder---Portfolio-Website" style="text-decoration: none; color: black;" class="card-link">GitHub link</a></button>
+                <button type="button" class="btn btn-info"><a href="https://khushi-keshari.github.io/iCoder---Portfolio-Website/" style="text-decoration: none; color: black;" class="card-link">Demo link</a></button>
+                </div>
+            </div>
+            </div>
 
             <!-- <div class="col-12 col-sm-6 col-md-4 col-lg-4">
             <div class="card h-100">
