--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -91,7 +91,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">ContactUs</a>
+              <a class="nav-link" href="contact.html">ContactUs</a>
             </li>
           </ul>
           <span class="navbar-text fw-bold fs-5 color-change position-absolute start-50 translate-middle-x">
