--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -84,7 +84,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">ContactUs</a>
+              <a class="nav-link active" href="contact.html">ContactUs</a>
             </li>
           </ul>
           <span class="navbar-text fw-bold fs-5 color-change position-absolute start-50 translate-middle-x">
