--- a/education.html
+++ b/education.html
@@ -33,6 +33,11 @@
                 font-weight: bold;
                 font-size: 24px;
            }
+           
+           body, html {
+            overflow-x: hidden;
+          }
+
       </style>
 
   </head>
@@ -107,9 +112,9 @@
 <section class="py-5">
   <div class="container text-center">
     <h1 style="color: #ac2bac;">EDUCATION</h1>
-  <div class="row py-5">
-    <div class="col">
-      <div class="card" style="width: 25rem;">
+  <div class="row g-5 py-5">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
           <h5><i class="bi bi-mortarboard-fill"></i>  National Institute of Technology Patna</h5>
@@ -123,8 +128,8 @@
       </div>
     </div>
     </div>
-    <div class="col">
-      <div class="card" style="width: 25rem;">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
           <h5><i class="bi bi-mortarboard-fill"></i>  Dr. Ambedkar Saraswati Vidya Mandir Inter College, Anpara, sonbhadra, U.p.</h5>
@@ -138,8 +143,8 @@
       </div>
     </div>
     </div>
-    <div class="col">
-      <div class="card" style="width: 25rem;">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="card">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
           <h5><i class="bi bi-mortarboard-fill"></i>  Dr. Ambedkar Saraswati Vidya Mandir Inter College, Anpara, sonbhadra, U.p.</h5>
